[project]
name = "puz-feed"
version = "0.1.0"
description = "Puzzle feed application"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "jinja2",
  "python-multipart",
  "itsdangerous",
  "sqlalchemy",
  "alembic",
  "passlib[bcrypt]",
  "puzpy",
  "pillow",
  "xword-dl>=2025.10.14",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  "E501", # line too long (handled by formatter)
  "B008", # function call in argument defaults (common FastAPI pattern)
]

[dependency-groups]
dev = [
  "honcho>=2.0.0",
  "ty>=0.0.1a25",
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "pytest-describe>=2.2.0",
  "ruff>=0.14.3",
]
